home page is done, category is done and login/register is done

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <script src="./frontend/assets/js/tether.min.js"></script>
     <script src="./frontend/assets/js/bootstrap.min.js"></script>
     <script src="./frontend/assets/js/custom.js"></script>
+    <script src="./frontend/assets/js/auth.js"></script>
 
 
 
